--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "island-cli-theme-default",
   "version": "1.0.0",
-  "description": "Island 博客默认主题",
+  "description": "Island blog default theme",
   "license": "MIT",
   "repository": "zhw2590582/island-cli-theme-default",
   "authors": [
