--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "app-loading": "^0.0.51",
     "dayjs": "^1.7.5",
+    "gitting": "^1.0.4",
     "highlight.js": "^9.12.0",
     "medium-zoom": "^0.4.0",
     "normalize.css": "^8.0.0"
